syntax = "proto3";

option csharp_namespace = "LKDin.Server.V2";

package user;

service User {
  rpc CreateUser(UpsertUserRequest) returns (ActionReply);

  rpc UpdateUser(UpsertUserRequest) returns (ActionReply);

  rpc DeleteUser(DeleteUserRequest) returns (ActionReply);
}

// The request message containing the user's name.
message UpsertUserRequest {
  string name = 1;
  string id = 2;
  string password = 3;
}

message DeleteUserRequest {
  string id = 1;
}

message ActionReply {
	string status = 1;
	string message = 2;
	bool   success = 3;
}